IMP-3533: Pom tests refactor